--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.2",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
