--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,7 +25,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "types": ["@emotion/react/types/css-prop"]
   },
   "include": ["src"]
 }
