--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@toss/react": "^1.8.1",
     "@toss/utils": "^1.6.1",
     "@uidotdev/usehooks": "^2.4.1",
+    "es-toolkit": "^1.30.1",
     "lottie-web": "^5.12.2",
     "motion": "^11.13.1",
     "react": "^18.3.1",
