--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@toss/utils": "^1.6.1",
     "@uidotdev/usehooks": "^2.4.1",
     "es-toolkit": "^1.30.1",
+    "lottie-colorify": "^0.8.0",
     "lottie-web": "^5.12.2",
     "motion": "^11.13.1",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-modal-sheet": "^3.3.0",
     "react-router": "^7.0.2",
