--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-modal-sheet": "^3.3.0",
     "react-router": "^7.0.2",
     "react-transition-group": "^4.4.5",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
