--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@mui/joy": "^5.0.0-beta.51",
     "@toss/react": "^1.8.1",
     "@toss/utils": "^1.6.1",
     "@uidotdev/usehooks": "^2.4.1",
@@ -22,6 +23,7 @@
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.2.0",
     "react-modal-sheet": "^3.3.0",
     "react-router": "^7.0.2",
     "react-transition-group": "^4.4.5",
