--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@toss/utils": "^1.6.1",
     "@uidotdev/usehooks": "^2.4.1",
     "es-toolkit": "^1.30.1",
+    "i18next": "^24.2.0",
     "lottie-colorify": "^0.8.0",
     "lottie-web": "^5.12.2",
     "motion": "^11.13.1",
