--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "globals": "^15.12.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "vite-plugin-static-copy": "^2.2.0"
   }
 }
