--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.3.0",
     "@mui/joy": "^5.0.0-beta.51",
+    "@mui/material": "^6.3.0",
+    "@react-spring/web": "^9.7.5",
     "@toss/react": "^1.8.1",
     "@toss/utils": "^1.6.1",
     "@uidotdev/usehooks": "^2.4.1",
+    "@use-gesture/react": "^10.3.1",
+    "dayjs": "^1.11.13",
     "es-toolkit": "^1.30.1",
     "i18next": "^24.2.0",
     "lottie-colorify": "^0.8.0",
@@ -26,6 +31,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.2.0",
     "react-modal-sheet": "^3.3.0",
+    "react-multi-carousel": "^2.8.5",
     "react-router": "^7.0.2",
     "react-transition-group": "^4.4.5",
     "recoil": "^0.7.7",
