--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "motion": "^11.13.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.2.0",
     "react-modal-sheet": "^3.3.0",
