--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@use-gesture/react": "^10.3.1",
     "dayjs": "^1.11.13",
     "es-toolkit": "^1.30.1",
+    "highlight.js": "^11.11.1",
     "i18next": "^24.2.0",
     "lottie-colorify": "^0.8.0",
     "lottie-web": "^5.12.2",
